--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -1,4 +1,4 @@
-name: "Install chia-blockchain"
+name: "Install cryptomines-blockchain"
 
 description: "Run the platform appropriate installer script."
 
