--- a/chia/util/initial-config.yaml
+++ b/chia/util/initial-config.yaml
@@ -148,7 +148,7 @@ seeder:
   crawler_db_path: "crawler.db"
   # Peers used for the initial run.
   bootstrap_peers:
-    - "node.chia.net"
+    - "node.cryptominesblockchain.pl"
   # Only consider nodes synced at least to this height.
   minimum_height: 240000
   # How many of a particular version we need to see before reporting it in the logs
@@ -441,7 +441,7 @@ full_node:
   # List of trusted DNS seeders to bootstrap from.
   # If you modify this, please change the hardcode as well from FullNode.set_server()
   dns_servers: &dns_servers
-    - "dns-introducer.chia.net"
+    - "dns-introducer.cryptominesblockchain.pl"
     - "chia.ctrlaltdel.ch"
     - "seeder.dexie.space"
     - "chia-seeder.h9.com"
@@ -454,7 +454,7 @@ full_node:
     host: *self_hostname
     port: 8446
   introducer_peer:
-    host: introducer.chia.net # Chia AWS introducer IPv4/IPv6
+    host: introducer.cryptominesblockchain.pl # Chia AWS introducer IPv4/IPv6
     port: 8444
     enable_private_networks: False
   wallet_peer:
@@ -567,7 +567,7 @@ wallet:
   recent_peer_threshold: 6000
 
   introducer_peer:
-    host: introducer.chia.net # Chia AWS introducer IPv4/IPv6
+    host: introducer.cryptominesblockchain.pl # Chia AWS introducer IPv4/IPv6
     port: 8444
     enable_private_networks: False
 
