--- a/.github/workflows/build-linux-installer-rpm.yml
+++ b/.github/workflows/build-linux-installer-rpm.yml
@@ -89,7 +89,7 @@ jobs:
         python3 -m venv ../venv
         . ../venv/bin/activate
         pip3 install setuptools_scm
-        echo "CHIA_INSTALLER_VERSION=$(python3 ./build_scripts/installer-version.py)" >> "$GITHUB_OUTPUT"
+        echo "CRYPTOMINES_INSTALLER_VERSION=$(python3 ./build_scripts/installer-version.py)" >> "$GITHUB_OUTPUT"
         deactivate
 
     - name: Test for secrets access
@@ -187,7 +187,7 @@ jobs:
 
     - name: Build .rpm package
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
         ldd --version
         cd ./build_scripts
@@ -209,67 +209,67 @@ jobs:
     - name: Upload to s3
       if: steps.check_secrets.outputs.HAS_AWS_SECRET
       env:
-          CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+          CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
           GIT_SHORT_HASH=$(echo "${GITHUB_SHA}" | cut -c1-8)
-          CHIA_DEV_BUILD=${CHIA_INSTALLER_VERSION}-$GIT_SHORT_HASH
+          CHIA_DEV_BUILD=${CRYPTOMINES_INSTALLER_VERSION}-$GIT_SHORT_HASH
           echo "CHIA_DEV_BUILD=$CHIA_DEV_BUILD" >> "$GITHUB_ENV"
           ls "$GITHUB_WORKSPACE"/build_scripts/final_installer/
-          aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/dev/cryptomines-blockchain-${CHIA_DEV_BUILD}-1.x86_64.rpm
-          aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/dev/cryptomines-blockchain-cli-${CHIA_DEV_BUILD}-1.x86_64.rpm
+          aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/dev/cryptomines-blockchain-${CHIA_DEV_BUILD}-1.x86_64.rpm
+          aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/dev/cryptomines-blockchain-cli-${CHIA_DEV_BUILD}-1.x86_64.rpm
 
     - name: Create Checksums
       if: env.FULL_RELEASE == 'true' || github.ref == 'refs/heads/main'
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
         ls "$GITHUB_WORKSPACE"/build_scripts/final_installer/
-        sha256sum "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm > "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.sha256
-        sha256sum "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm > "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.sha256
+        sha256sum "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm > "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.sha256
+        sha256sum "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm > "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.sha256
         ls "$GITHUB_WORKSPACE"/build_scripts/final_installer/
 
     - name: Create .rpm torrent
       if: env.FULL_RELEASE == 'true'
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm -o "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.torrent --webseed https://download.chia.net/install/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm
-        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm -o "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.torrent --webseed https://download.chia.net/install/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm
-        gh release upload $RELEASE_TAG "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.torrent
+        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm -o "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.torrent --webseed https://download.chia.net/install/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm
+        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm -o "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.torrent --webseed https://download.chia.net/install/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm
+        gh release upload $RELEASE_TAG "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.torrent
 
     - name: Upload Dev Installer
       if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/main'
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/latest-dev/cryptomines-blockchain-1.x86_64_latest_dev.rpm
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download.chia.net/latest-dev/cryptomines-blockchain-1.x86_64_latest_dev.rpm.sha256
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/latest-dev/cryptomines-blockchain-cli-1.x86_64_latest_dev.rpm
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download.chia.net/latest-dev/cryptomines-blockchain-cli-1.x86_64_latest_dev.rpm.sha256
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/latest-dev/cryptomines-blockchain-1.x86_64_latest_dev.rpm
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download.chia.net/latest-dev/cryptomines-blockchain-1.x86_64_latest_dev.rpm.sha256
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/latest-dev/cryptomines-blockchain-cli-1.x86_64_latest_dev.rpm
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download.chia.net/latest-dev/cryptomines-blockchain-cli-1.x86_64_latest_dev.rpm.sha256
 
     - name: Upload Release Files
       if: steps.check_secrets.outputs.HAS_AWS_SECRET && env.FULL_RELEASE == 'true'
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/install/
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download.chia.net/install/
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.torrent s3://download.chia.net/torrents/
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/install/
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download.chia.net/install/
-        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm.torrent s3://download.chia.net/torrents/
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/install/
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download.chia.net/install/
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.torrent s3://download.chia.net/torrents/
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm s3://download.chia.net/install/
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download.chia.net/install/
+        aws s3 cp "$GITHUB_WORKSPACE"/build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm.torrent s3://download.chia.net/torrents/
 
     - name: Upload release artifacts
       if: env.RELEASE == 'true'
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
         gh release upload \
           $RELEASE_TAG \
-          build_scripts/final_installer/cryptomines-blockchain-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm \
-          build_scripts/final_installer/cryptomines-blockchain-cli-${CHIA_INSTALLER_VERSION}-1.x86_64.rpm
+          build_scripts/final_installer/cryptomines-blockchain-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm \
+          build_scripts/final_installer/cryptomines-blockchain-cli-${CRYPTOMINES_INSTALLER_VERSION}-1.x86_64.rpm
 
     - name: Mark pre-release installer complete
       if: steps.check_secrets.outputs.HAS_GLUE_SECRET && env.PRE_RELEASE == 'true'
