--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -172,9 +172,9 @@ jobs:
         python -m venv ../venv
         source ../venv/Scripts/activate
         pip3 install setuptools_scm
-        CHIA_INSTALLER_VERSION=$(python ./build_scripts/installer-version.py)
-        echo "$CHIA_INSTALLER_VERSION"
-        echo "CHIA_INSTALLER_VERSION=$CHIA_INSTALLER_VERSION" >> "$GITHUB_OUTPUT"
+        CRYPTOMINES_INSTALLER_VERSION=$(python ./build_scripts/installer-version.py)
+        echo "$CRYPTOMINES_INSTALLER_VERSION"
+        echo "CRYPTOMINES_INSTALLER_VERSION=$CRYPTOMINES_INSTALLER_VERSION" >> "$GITHUB_OUTPUT"
         deactivate
 
     - name: Get latest madmax plotter
@@ -256,7 +256,7 @@ jobs:
 
     - name: Build Windows installer
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
         HAS_SIGNING_SECRET: ${{ steps.check_secrets.outputs.HAS_SIGNING_SECRET }}
       run: |
         $env:path="C:\Program` Files` (x86)\Microsoft` Visual` Studio\2019\Enterprise\SDK\ScopeCppSDK\vc15\VC\bin\;$env:path"
@@ -285,21 +285,21 @@ jobs:
     - name: Upload to s3
       if: steps.check_secrets.outputs.HAS_AWS_SECRET
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       shell: bash
       run: |
         GIT_SHORT_HASH=$(echo "${GITHUB_SHA}" | cut -c1-8)
-        CHIA_DEV_BUILD=${CHIA_INSTALLER_VERSION}-$GIT_SHORT_HASH
+        CHIA_DEV_BUILD=${CRYPTOMINES_INSTALLER_VERSION}-$GIT_SHORT_HASH
         echo CHIA_DEV_BUILD=${CHIA_DEV_BUILD} >> "$GITHUB_OUTPUT"
         echo ${CHIA_DEV_BUILD}
         pwd
-        aws s3 cp cryptomines-blockchain-gui/release-builds/windows-installer/ChiaSetup-${CHIA_INSTALLER_VERSION}.exe s3://download.chia.net/dev/ChiaSetup-${CHIA_DEV_BUILD}.exe
+        aws s3 cp cryptomines-blockchain-gui/release-builds/windows-installer/ChiaSetup-${CRYPTOMINES_INSTALLER_VERSION}.exe s3://download.chia.net/dev/ChiaSetup-${CHIA_DEV_BUILD}.exe
 
     - name: Create Checksums
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
-         certutil.exe -hashfile ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe SHA256 > ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe.sha256
+         certutil.exe -hashfile ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe SHA256 > ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe.sha256
          ls ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\
 
     - name: Create torrent
@@ -307,32 +307,32 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe -o ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe.torrent --webseed https://download.chia.net/install/ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe
+        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe -o ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe.torrent --webseed https://download.chia.net/install/ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe
         ls
-        gh release upload $env:RELEASE_TAG ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe.torrent
+        gh release upload $env:RELEASE_TAG ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe.torrent
 
     - name: Upload Dev Installer
       if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/main'
       env:
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
-        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe s3://download.chia.net/latest-dev/ChiaSetup-latest-dev.exe
-        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe.sha256 s3://download.chia.net/latest-dev/ChiaSetup-latest-dev.exe.sha256
+        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe s3://download.chia.net/latest-dev/ChiaSetup-latest-dev.exe
+        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe.sha256 s3://download.chia.net/latest-dev/ChiaSetup-latest-dev.exe.sha256
 
     - name: Upload Release Files
       if: steps.check_secrets.outputs.HAS_AWS_SECRET && env.FULL_RELEASE == 'true'
       run: |
-        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe s3://download.chia.net/install/
-        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe.sha256 s3://download.chia.net/install/
-        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe.torrent s3://download.chia.net/torrents/
+        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe s3://download.chia.net/install/
+        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe.sha256 s3://download.chia.net/install/
+        aws s3 cp ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe.torrent s3://download.chia.net/torrents/
 
     - name: Upload release artifacts
       if: env.RELEASE == 'true'
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CHIA_INSTALLER_VERSION: ${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}
+        CRYPTOMINES_INSTALLER_VERSION: ${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}
       run: |
-        gh release upload $env:RELEASE_TAG ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CHIA_INSTALLER_VERSION }}.exe
+        gh release upload $env:RELEASE_TAG ${{ github.workspace }}\cryptomines-blockchain-gui\release-builds\windows-installer\ChiaSetup-${{ steps.version_number.outputs.CRYPTOMINES_INSTALLER_VERSION }}.exe
 
     - name: Mark pre-release installer complete
       if: steps.check_secrets.outputs.HAS_GLUE_SECRET && env.PRE_RELEASE == 'true'
