--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,4 @@
 [submodule "cryptomines-blockchain-gui"]
 	path = cryptomines-blockchain-gui
 	url = https://github.com/LloydMontgomeryGarmadon/cryptomines-blockchain-gui.git
-        branch = main
+        branch = test
