--- a/chia/util/initial-config.yaml
+++ b/chia/util/initial-config.yaml
@@ -149,7 +149,7 @@ seeder:
   crawler_db_path: "crawler.db"
   # Peers used for the initial run.
   bootstrap_peers:
-    - "node.cryptominesblockchain.pl"
+    - "node.chiablockchain.pl"
   # Only consider nodes synced at least to this height.
   minimum_height: 240000
   # How many of a particular version we need to see before reporting it in the logs
@@ -442,7 +442,7 @@ full_node:
   # List of trusted DNS seeders to bootstrap from.
   # If you modify this, please change the hardcode as well from FullNode.set_server()
   dns_servers: &dns_servers
-    - "dns-introducer.cryptominesblockchain.pl"
+    - "dns-introducer.chiablockchain.pl"
     - "chia.ctrlaltdel.ch"
     - "seeder.dexie.space"
     - "chia-seeder.h9.com"
@@ -455,7 +455,7 @@ full_node:
     host: *self_hostname
     port: 44413
   introducer_peer:
-    host: introducer.cryptominesblockchain.pl # Cryptomines AWS introducer IPv4/IPv6
+    host: introducer.chiablockchain.pl # Cryptomines AWS introducer IPv4/IPv6
     port: 44412
     enable_private_networks: False
   wallet_peer:
@@ -573,7 +573,7 @@ wallet:
   recent_peer_threshold: 6000
 
   introducer_peer:
-    host: introducer.cryptominesblockchain.pl # Cryptomines AWS introducer IPv4/IPv6
+    host: introducer.chiablockchain.pl # Cryptomines AWS introducer IPv4/IPv6
     port: 44412
     enable_private_networks: False
 
@@ -691,7 +691,7 @@ simulator:
   farming_address:
 
   # the directory used to save plots
-  # for the plot directory below the final directory will be: ~/.cryptomines/simulator/plots
+  # for the plot directory below the final directory will be: ~/.chia/simulator/plots
   plot_directory: simulator/plots
 
   # Should we use real time in the simulated chain?
